tests/errors/must_have.b
S :: struct { x int }

S :: foo() {
}

fn main() {
}
